fix(scrolling): enable scrolling on safari (#82)

--- a/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
@@ -7,6 +7,10 @@ app-component-sidenav {
 
 .docs-component-viewer-sidenav-container {
   width: 100%;
+  
+  .md-sidenav-content {
+    position: absolute;
+  }
 }
 
 .docs-component-viewer-sidenav {
